# servicebox

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: entrypoint.sh
docs/: index.adoc  model.erd.puml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: Footer.vue  Navbar.vue
servicebox/: cleandb.sh  manage.py  pyproject.toml
servicebox/scripts/: platforms.py  services.py  superuser.py  tenants.py
servicebox/servicebox/: asgi.py  settings.py  urls.py  views.py  wsgi.py
servicebox/services/: admin.py  models.py  tables.py  tests.py  urls.py  views.py
servicebox/services/api/: serializers.py  urls.py  views.py
servicebox/services/migrations/: 0001_initial.py  0002_auto_20200807_1418.py  0003_auto_20200807_1432.py  0004_auto_20200807_1442.py  0005_auto_20200807_1504.py  0006_auto_20200807_1521.py  0007_auto_20200807_1533.py  0008_auto_20200811_0912.py
servicebox/services/templates/services/: service_detail.html  service_list.html
servicebox/services/templates/services/tables/: edit.html
servicebox/services/tests/: test_api.py  test_models.py
servicebox/static/css/: main.css
servicebox/templates/: base.html  home.html
servicebox/templates/inc/: navbar.html
servicebox/tenancy/: admin.py  models.py  tests.py  urls.py  views.py
servicebox/tenancy/api/: serializers.py  urls.py  views.py
servicebox/tenancy/migrations/: 0001_initial.py  0002_auto_20200811_0912.py
servicebox/tenancy/tests/: test_api.py
(+4 files in other folders)
