[tool.poetry]
name = "servicebox"
version = "0.1.0"
description = "Simple, lean service inventory management."
authors = ["Felix Peters <felix.peters@breuninger.de>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.14"
django-taggit-serializer = "^0.1.7"
django-taggit = "^1.3.0"
django-mptt = "^0.11.0"
django-model-choices = "^1.0.0"
django-extensions = "^3.0.9"
django-cors-headers = "^3.5.0"
django-autoslug = "^1.9.8"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
